--- a/style.css
+++ b/style.css
@@ -1,18 +1,11 @@
 @import url(style/header.css);
 
 :root{
-
-    --cor-de-fundo: #f2f4f7;
-    --branco:#f5f2f2;
-    --amarelo:#ff6e27;
-    --roxo:#331327;
-
+    --cor-de-fundo: #c5cad6;
 }
 
 body{
-    background-color: 
-    var(--cor-de-fundo);
-    
+    background-color: var(--cor-de-fundo);
 }
 
 h1{
